Edited YOLO evaluation description

--- a/Fine_Tune_YOLO.ipynb
+++ b/Fine_Tune_YOLO.ipynb
@@ -185,8 +185,7 @@
         "id": "MSx0XkopSJYn"
       },
       "source": [
-        "# Edit the file paths below to go to obj.data, yolo-obj.cfg, and yolo-obj_best.weights\n",
-        "# (the saved weights that yielded the highest mAP).\n",
+        "# Edit the file paths below to go to obj.data, yolo-obj.cfg, and yolo-obj_best.weights.\n",
         "\n",
         "%%shell\n",
         "\n",
